"fixed homepage sizes and spacing"

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -320,7 +320,7 @@ table {
 }
 /* --Destination-- */
 .destination-box {
-  height: 5.65rem;
+  height: 8.25rem;
   color: #FBEEC1;
   font-size: 22px;
   padding: 30px 0px 0px 0px;
