--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -1,6 +1,6 @@
 /* --Destination-- */
 .destination-box {
-    height: 5.65rem;
+    height: 8.25rem;
     color: @dirt-grey;
     font-size: 22px;
     padding: 30px 0px 0px 0px;
